2012-12-18  Alice Liu  <alice.liu@apple.com>

        Add SPI to WebKit1 WebFrame for node conversion to JSValueRef
        https://bugs.webkit.org/show_bug.cgi?id=105262

        Reviewed by Anders Carlsson.

        * WebView/WebFrame.mm:
        (-[WebFrame jsWrapper:forWorld:]): Added. Takes a DOMNode and WebScriptWorld and provides a JSValueRef
        for the WebCore::Node in that particular WebScriptWorld.
        * WebView/WebFramePrivate.h:

2012-12-18  Beth Dakin  <bdakin@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=102579
        [mac] Enable scaled cursors

        Reviewed by Dean Jackson.

        * Configurations/FeatureDefines.xcconfig:

2012-12-16  Levi Weintraub  <leviw@chromium.org>

        Push pixel snapping logic into TransformState
        https://bugs.webkit.org/show_bug.cgi?id=101779

        Reviewed by Simon Fraser.

        * WebView/WebFullScreenController.mm:
        (screenRectOfContents): Removed SnapOffsetForTransforms as it's no longer needed.

2012-12-15  Anders Carlsson  <andersca@apple.com>

        Rename FrameLoaderClient::download to convertMainResourceLoadToDownload
        https://bugs.webkit.org/show_bug.cgi?id=105122

        Reviewed by Andreas Kling.

        Update for WebCore changes.

        * WebCoreSupport/WebFrameLoaderClient.h:
        (WebFrameLoaderClient):
        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::convertMainResourceLoadToDownload):

2012-12-15  Mark Lam  <mark.lam@apple.com>

        Re-landing patch for "Introducing the DatabaseStrategy and database servers".
        https://bugs.webkit.org/show_bug.cgi?id=104934.

        Not reviewed.

        Merged from r137767. Previously reviewed by Sam Weinig.

        * WebCoreSupport/WebPlatformStrategies.h:
        (WebPlatformStrategies):
        * WebCoreSupport/WebPlatformStrategies.mm:
        (WebPlatformStrategies::createDatabaseStrategy):

2012-12-14  Mark Lam  <mark.lam@apple.com>
